syntax = "proto3";

// 指定包名
package pb;


option go_package="./;pb";

// DeviceInformationCollectionService 设备信息采集服务
service DeviceInformationCollectionService {
  rpc SendStatus(stream DeviceStatusUpdate) returns (DeviceStatusResponse);
}

// DeviceStatusUpdate 客户端：设备信息上报结构
message DeviceStatusUpdate {
  string device_id = 1;
  string name = 2;
  string status_message = 3;  // 1:正常 2:故障 3:关闭
}

// DeviceStatusResponse 服务端：响应信息
message DeviceStatusResponse {
  string message = 1;
}